Outra mudança na pagina

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Olá, Mundo</h1>
-    <p>Minha Primeira pagina dentro do repositório</p>
+    <p>Minha primeira página dentro do repositório</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis doloremque animi magnam voluptatum autem amet, facilis reiciendis corporis aut quidem ducimus alias quam culpa ab delectus suscipit vitae ut. Dolore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cum facere veniam fuga consequatur aspernatur esse, quas accusantium pariatur perspiciatis. Vero fugiat sapiente doloremque aliquid aliquam? Libero tempore veritatis vitae.</p>
 </body>
 </html>
