--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site em repositório</title>
 </head>
+
 <body>
     <h1>Olá, Mundo</h1>
     <p>Minha primeira página dentro do repositório</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis doloremque animi magnam voluptatum autem amet, facilis reiciendis corporis aut quidem ducimus alias quam culpa ab delectus suscipit vitae ut. Dolore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cum facere veniam fuga consequatur aspernatur esse, quas accusantium pariatur perspiciatis. Vero fugiat sapiente doloremque aliquid aliquam? Libero tempore veritatis vitae.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis doloremque animi magnam voluptatum autem amet,
+        facilis reiciendis corporis aut quidem ducimus alias quam culpa ab delectus suscipit vitae ut. Dolore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cum facere veniam fuga consequatur aspernatur
+        esse, quas accusantium pariatur perspiciatis. Vero fugiat sapiente doloremque aliquid aliquam? Libero tempore
+        veritatis vitae.</p>
 </body>
+
 </html>
