--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,13 +9,22 @@
 </head>
 
 <body>
-    <h1>Olá, Mundo</h1>
-    <p>Minha primeira página dentro do repositório</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis doloremque animi magnam voluptatum autem amet,
-        facilis reiciendis corporis aut quidem ducimus alias quam culpa ab delectus suscipit vitae ut. Dolore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cum facere veniam fuga consequatur aspernatur
-        esse, quas accusantium pariatur perspiciatis. Vero fugiat sapiente doloremque aliquid aliquam? Libero tempore
-        veritatis vitae.</p>
+   <header>
+       <h1>Titulo do Site</h1>
+   </header>
+   <main>
+       <article>
+           <h2>Título do artigo 001</h2>
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, magni tempora ducimus impedit minima odio quae nobis, vero, fugiat est neque deleniti veritatis aut possimus reiciendis laboriosam. Perferendis, aliquam pariatur?</p>
+       </article>
+       <article>
+           <h2>Título do artigo 002</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quod non, veniam deleniti voluptate accusamus distinctio ea delectus at voluptas asperiores veritatis odio laborum, inventore quisquam? At incidunt repudiandae nihil!</p>
+       </article>
+   </main>
+   <footer>
+       <p>Rodape do site</p>
+   </footer>
 </body>
 
 </html>
