--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,20 +10,20 @@
 
 <body>
    <header>
-       <h1>Titulo do Site</h1>
+       <h1>Testando as Branch</h1>
    </header>
    <main>
        <article>
-           <h2>Título do artigo 001</h2>
+           <h2>Criando a Branch</h2>
            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, magni tempora ducimus impedit minima odio quae nobis, vero, fugiat est neque deleniti veritatis aut possimus reiciendis laboriosam. Perferendis, aliquam pariatur?</p>
        </article>
        <article>
-           <h2>Título do artigo 002</h2>
+           <h2>Depois fazendo merge</h2>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quod non, veniam deleniti voluptate accusamus distinctio ea delectus at voluptas asperiores veritatis odio laborum, inventore quisquam? At incidunt repudiandae nihil!</p>
        </article>
    </main>
    <footer>
-       <p>Rodape do site</p>
+       <p>Esse é o rodape da página</p>
    </footer>
 </body>
 
