--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro site em repositório</title>
+    <title>Meu primeiro site no repositório</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 
 <body>
